# coco-code-review

./: .coco-pr-review.yml  .gitignore  README.md  action.yml  demo_bug.py  pyproject.toml
.claude/skills/ai-events-fetch/: SKILL.md
.claude/skills/to-prd/: SKILL.md
.cortex/plans/: plan_2026-05-28_1113.md
.github/actions/snowflake-oidc/: action.yml
.github/workflows/: ci.yml  coco-branch-review-on-demand.yml  coco-branch-review-smoke.yml  coco-pr-review-smoke.yml  coco-pr-review.yml  tag-release.yml
e2e_demo/: order_math.py
examples/: account_utils.py  user_metrics.py
fixtures/bad-snowflake-pr/: README.md
fixtures/bad-snowflake-pr/app/: load_orders.py
setup/: snowflake_setup.sql
src/coco_pr_review/: __init__.py  __main__.py  config.py  detection.py  git_diff.py  github_event.py  prompts.py  retry.py  review_runner.py  reviewer_spec.py  sanitize.py  schema.py  severity.py  skip.py
src/coco_pr_review/agents/: verifier.md  (+7 more)
tests/integration/: test_github_workflows.py
tests/unit/: test_branch_source.py  test_client.py  test_commit_publisher.py  test_config.py  test_detection.py  test_fingerprints.py  test_git_diff.py  test_github_checks.py  test_github_diff.py  test_github_fingerprints.py  test_github_reactions.py  test_github_sticky.py  test_orchestration_base.py  test_prompts.py  test_publisher.py  test_publisher_inline_render.py  test_python_fanout.py  test_retry.py  test_review_runner.py  test_reviewer_prompts.py  test_reviewer_spec.py  test_sanitize.py  test_schema.py  test_sdk_adapter.py  test_severity.py  test_skip.py  test_trigger_entrypoint.py
(+21 files in other folders)
