[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coco-pr-review"
version = "0.0.1"
description = "GitHub PR review agent powered by Snowflake Cortex Code Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sfc-gh-jgrip" }]
dependencies = [
    "anyio>=4.0",
    "pyyaml>=6.0",
    "PyGithub>=2.0",
    "cortex-code-agent-sdk",
    "jsonschema>=4.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coco_pr_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
